<resources>
    <string name="app_name">Muna</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="register">Register</string>
    <string name="password_hint">Password</string>
    <string name="title_activity_register">Join</string>
    <string name="username_email_hint">Username or email</string>
    <string name="sign_in">Sign in</string>
    <string name="email_hint">Email</string>
    <string name="username_hint">Username</string>
    <string name="wrong_credentials">Sorry, wrong credentials</string>
    <string name="title_activity_main">Muna</string>

    <string name="map_fragment_title">Map</string>
    <string name="marks_fragment_title">Marks</string>
    <string name="profile_fragment_title">Profile</string>

    <string name="drawer_open">Open menu</string>
    <string name="drawer_close">Close menu</string>
    <string name="title_activity_mark_create">MarkCreateActivity</string>
    <string name="mark_create_next">Next</string>
    <string name="mark_name_hint">Name</string>
    <string name="add_mark">Add</string>
    <string name="mark_details">Mark details</string>
    <string name="mark_location">Mark location</string>
    <string name="change_mark_type">Change type</string>
    <string name="single_mark">Single mark</string>
    <string name="area_mark">Area mark</string>
    <string name="send">Send</string>
    <string name="message_text_hint">Write a message</string>
    <string name="title_activity_profile">ProfileActivity</string>

    <string name="marks_nearby">Marks available nearby</string>

    <string name="team">Team</string>
    <string name="password_again_hint">Retype password</string>
    <string name="email_error">Provide a valid email</string>
    <string name="password_error">Password should be more than %1$s characters</string>
    <string name="username_exists">This username is taken.</string>
    <string name="email_exists">This email exists in the system.</string>
    <string name="passwords_dont_match">Passwords don\'t match.</string>
    <string name="username_too_long">Username is too long.</string>
    <string name="email_too_long">Email is too long</string>
    <string name="username_too_short">Choose a longer username.</string>
    <string name="count_mark">Count mark</string>
    <string name="title_mark_list">Marks</string>
    <string name="title_mark_detail">Mark Detail</string>
    <string name="attempt_count">Attempt</string>
    <string name="wrong_codeword">Sorry, this is wrong codeword!</string>
    <string name="mark_counted">You have completed this mark</string>
    <string name="no_connection">Please, check your internet connection</string>
    <string name="all_marks">All marks</string>
    <string name="gps_unavailable">Sorry, you have to have a GPS available on your device</string>
    <string name="waiting_for_location">Acquiring my location</string>
    <string name="add_to_team">Add to my team</string>
    <string name="send_message">Send a message</string>
    <string name="remove_from_team">In my team</string>
    <string name="accept_request">Accept request</string>
    <string name="decline_request">Decline request</string>
    <string name="remove_request">Remove request</string>
    <string name="server_error">Server error</string>
    <string name="incoming_request_notification">Team invitations</string>
    <string name="search_users_hint">Search users</string>
    <string name="incoming_requests">Incoming requests</string>
    <string name="title_activity_team_requests">Team requests</string>
    <string name="new_team_requests">New team requests</string>
    <string name="search_users">Search players</string>
    <string name="search_players">Search players</string>
    <string name="undo">Undo</string>
    <string name="removed_from_team">Removed from my team</string>
    <string name="error_creating_file_for_photo">Error creating photo file</string>
    <string name="no_marks_nearby">Sorry, no marks nearby. Try moving to another location.</string>
    <string name="search_marks">Search marks</string>
    <string name="unknown_location">Unknown location</string>
    <string name="unnamed_mark">Unnamed mark</string>
    <string name="bookmarked_marks">Bookmarked marks</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="removed_from_bookmarks">Removed from bookmarks</string>
    <string name="title_activity_edit_profile">Edit my profile</string>
    <string name="account">Account</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="profile">Profile</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="country">Country</string>
    <string name="change_password">Change password</string>
    <string name="repeat_password">Repeat</string>
    <string name="facebook">Facebook</string>
    <string name="facebook_link">Link</string>
    <string name="unlink">Unlink</string>
    <string name="edit_profile">Edit profile</string>
    <string name="edit">Edit</string>
    <string name="profile_changes_saved">Your profile has been updated.</string>

    <string name="facebook_app_id">1613408378938573</string>
    <string name="pick_image">Pick an image</string>
    <string name="pref_notifications_title">Notifications</string>
    <string name="pref_chat_notifications">Chat notifications</string>
    <string name="pref_team_requests_notifications">Team requests notifications</string>
    <string name="pref_nearby_marks_notifications">Nearby marks notifications</string>
    <string name="pref_nearby_marks_on">You will be notified when there are available marks nearby</string>
    <string name="pref_nearb_marks_off">You won\'t be notified when there are available marks nearby</string>
    <string name="pref_misc_title">Miscellaneous</string>
    <string name="pref_logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="view_my_profile">View my profile</string>
    <string name="level">Level</string>
    <string name="show_collected_marks">Show collected marks</string>
    <string name="show_collected_marks_summary_on">Collected marks will be shown on the main map</string>
    <string name="show_collected_marks_summary_off">Collected marks won\'t be shown on the main map</string>
    <string name="show_my_marks">Show my own marks</string>
    <string name="show_my_marks_on">Marks created by myself will be shown on the main map</string>
    <string name="show_my_marks_off">Marks created by myself won\'t be shown on the main map</string>
    <string name="pef_map_title">Map</string>
    <string name="mark_hidden">Mark has been hidden.</string>
    <string name="add_photo">Add photo</string>
    <string name="mark_note_hint">Add a note</string>
    <string name="enter_codeword">Think up a codeword</string>
    <string name="codeword_hint">codeword</string>
    <string name="choose_mark_location">Choose location where you placed your mark</string>
    <string name="next">Next</string>
    <string name="new_mark_title">New mark</string>
    <string name="new_mark_creating">You want to create a new mark. Here is what you do.\nTake a sheet of paper or something more creative that you can use to write a codeword on\nThink up (or generate it) a codeword and write it down\nNow go outside and hide it somewhere\nWhen you finished, click on the button to specify location and details</string>
    <string name="finish">submit_creating_mark</string>
    <string name="submit_creating_mark">Finish creating mark</string>
    <string name="my_codeword">My codeword</string>
    <string name="title_activity_showcase">ShowcaseActivity</string>
    <string name="codeword_requirements">Minimum 8 characters, digits and letters</string>
    <string name="cancel">Cancel</string>


    <string-array name="sc_mark_creation">
        <item>You want to create a new mark. Here is what you do. </item>
        <item>Think up (or generate) a codeword. A codeword is a unique word or combination of words. A player who finds your mark would use the codeword to complete it.</item>
        <item>Take a sheet of paper or something more creative and write the codeword down.</item>
        <item>Now go outside and hide it somewhere on the streets. This place should be unremarkable so the codeword would be placed there safely</item>
        <item>Now submit your mark and wait for someone to find it and you earn experience!</item>
    </string-array>

</resources>
