<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map_fragment"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/map_fragment_title"
            android:checked="true"/>
        <item
            android:id="@+id/nav_marks_fragment"
            android:icon="@drawable/ic_pin_drop_black_24dp"
            android:title="@string/marks_fragment_title" />
        <item
            android:id="@+id/nav_bookmarked_fragment"
            android:icon="@drawable/ic_bookmark_black_24dp"
            android:title="@string/bookmarks" />
        <item
            android:id="@+id/nav_team_fragment"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/team" />
        <item
            android:id="@+id/nav_settings_fragment"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />
    </group>
</menu>