<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/list_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingTop="4dp"
            android:text="@string/marks_nearby"
            android:textAllCaps="true"
            android:textStyle="bold" />
        <FrameLayout
            android:id="@+id/panel_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <ViewSwitcher
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/panel_collapsed"
        android:inAnimation="@android:anim/fade_in" >

        <Button
            android:id="@+id/count_mark_quick"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sliding_panel_height"
            android:background="?attr/selectableItemBackground"
            android:text="@string/count_mark" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/sliding_panel_height"
            android:id="@+id/waiting_for_location">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/waiting_for_location_text"
                android:layout_toStartOf="@+id/waiting_for_location_text"
                android:visibility="visible" />

            <TextView
                android:id="@+id/waiting_for_location_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/waiting_for_location" />

        </RelativeLayout>
    </ViewSwitcher>

</FrameLayout>