<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/new_mark_title"
        android:textColor="@color/lightPrimary"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_above="@+id/relativeLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/primary"
        android:layout_alignParentBottom="false"
        android:layout_centerInParent="true"
        android:id="@+id/relativeLayout">

        <TextView
            android:id="@+id/enter_codeword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/enter_codeword"
            android:textAllCaps="true"
            android:textColor="@color/lightPrimary"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/codeword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/enter_codeword"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:hint="@string/codeword_hint"
            android:inputType="textNoSuggestions|textCapCharacters|textMultiLine"
            android:maxLength="32"
            android:paddingBottom="24dp"
            android:paddingTop="24dp"
            android:textColor="@color/accent"
            android:textSize="36sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/codeword_requirements"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/codeword_requirements"
            android:textAllCaps="true"
            android:layout_below="@id/codeword"
            android:textColor="@color/lightPrimary"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/generate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="?android:attr/selectableItemBackground"
            android:padding="12dp"
            android:src="@drawable/ic_find_replace_white_24dp" />
    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_margin="32dp"
        android:src="@drawable/ic_arrow_forward_white_24dp"
        app:borderWidth="0dp"
        app:elevation="6dp"
        app:fabSize="normal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>